# agentsciml

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  swarm.yaml  telemetry.jsonl
.brev/: setup.sh
.github/workflows/: test.yml
autoresearch/engine/: meta_runner.py
autoresearch/workspace/: meta_hypothesis.yaml
docs/: agentic-ai-landscape.md
knowledge/: dmipy_techniques.yaml  neurosim_techniques.yaml  parameter_golf_techniques.yaml  qcccm_techniques.yaml
scripts/: create_brev_instance.sh  run_on_brev.sh  setup_brev.sh  setup_local.sh  setup_runpod.sh  slurm_run.sh
src/agentsciml/: __init__.py  agents.py  cli.py  cost.py  knowledge.py  orchestrator.py  protocols.py  sandbox.py  swarm.py  tree.py
src/agentsciml/adapters/: __init__.py  base.py  dmipy.py  meta.py  neurosim.py  parameter_golf.py  qcccm.py  vbjax.py
tests/: conftest.py  test_adapters.py  test_agents.py  test_cost.py  test_dmipy_adapter.py  test_knowledge.py  test_meta_adapter.py  test_neurosim_adapter.py  test_orchestrator.py  test_parameter_golf_adapter.py  test_protocols.py  test_sandbox.py  test_swarm.py  test_tree.py
