[project]
name = "agentsciml"
version = "0.1.0"
description = "Multi-agent evolutionary framework for scientific machine learning discovery"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
agentsciml = "agentsciml.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsciml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
