[project]
name = "agentsciml"
version = "0.1.0"
description = "Multi-agent evolutionary framework for scientific machine learning discovery"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[project.scripts]
agentsciml = "agentsciml.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsciml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Pure unit tests with no external dependencies",
    "integration: Tests that mock external APIs but test module interactions",
    "slow: Tests that take >5s (sandbox execution, full pipelines)",
]

[tool.coverage.run]
source = ["agentsciml"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
